2005-01-27  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #2337: remove 30KB editing limit in Template Editor

2005-01-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* added error logging to DB initialization code

2006-01-27  Peter Niederlag <peter@niederlag.de>

	* Fixed bug #2023, removed most of RTE-Config from sysEXT:cms and sysExt:css-styled_content

2006-01-27  Ingmar Schlecht <ingmar@typo3.org>

	* Added <label> tags around "Expand all" in class.alt_menu_functions.inc

2006-01-27  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Improved output of FlexForm contents inside of eg. Web>List module (stripping tags that is :-)
	* Added function for counting references to records (in t3lib_BEfunc)
	* Added warning to About Modules if the reference index is empty (which it will be for all updates to 4.0)
	* Added connectDB function in t3lib_db (used by clients of new feature in index_ts.php, see later.)
	* Fixed bug in t3lib_install which resulted in no recognition of the install tool token in localconf.php files: Essentially this has lead to bloated localconf.php files on windows machines if they were edited manually with chr(13).chr(10) line endings.
	* Added "deleted" column to reference index.
	* Working on cli-script for updating reference index from command line (necessary for large databases!!)
	* Added new class, t3lib_flexformtools, providing framework for manipulation of flexform data. (specifically it can be used for traversal of flexform data).
	* Fixed a bug related to language-limiting: Now, a backend user limited to a certain language cannot create records in default or other languages anymore.
	* Fixed bug in t3lib_tcemain where files uploaded to a record in case of auto-versioning did not work
	* Fixed very tricky problem that an auto-versioned record with files attached would create double-references! Uh.... Look for ->autoVersioningUpdate in tcemain and there is a fine explanation of a scenario and how I worked around it.